fix method getFirst()